# preposterous

./: .ghci  .gitmodules  CHANGELOG.md  README.md  nixpkgs.json  preposterous.cabal  shell.nix
lib/: Main.hs  Praeludium.hs  Types.hs
lib/Eval/: Monad.hs
lib/Inference/: Engine.hs  Monad.hs
