name:                preposterous
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Soham Chowdhury
maintainer:          chow.soham@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable preposterous
  main-is:             Main.hs
  build-depends:       base, text, containers, mtl, prettyprinter, bound
  hs-source-dirs:      lib
  default-language:    Haskell2010
