name:                preposterous
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Soham Chowdhury
maintainer:          chow.soham@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable preposterous
  main-is:             Main.hs
  other-modules:       Inference.Monad, Inference.Engine, Types
  build-depends:       base, text, containers, mtl, prettyprinter, bound, lens, deriving-compat
  hs-source-dirs:      lib
  default-language:    Haskell2010
